--- a/frontend/styles/overrides/SegmentedControl.module.css
+++ b/frontend/styles/overrides/SegmentedControl.module.css
@@ -33,10 +33,14 @@
 /* LABEL */
 
 .label {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	line-height: 1;
 	font-size: 17px;
 	font-weight: var(--font-weight-semibold);
 	color: var(--color-system-text-200);
-	padding: var(--size-spacing-10);
+	padding: var(--size-spacing-15);
 	transition: all 300ms ease;
 }
 
@@ -48,11 +52,7 @@
 
 .label[data-active="true"] {
 	color: var(--color-system-text-100);
-}
-
-/* Fix flashing before loading js, but don't apply to white variant */
-.label[data-active="true"]:not(.variantWhite) {
-	--sc-color: var(--color-system-background-100);
+	--sc-color: var(--color-system-background-100); /* Fix flashing before loading js */
 }
 
 .label[data-disabled="true"] {
@@ -69,4 +69,11 @@
 .label.variantWhite[data-active="true"] {
 	opacity: 1;
 	color: var(--color-primary-black);
+}
+
+/* * */
+/* INNER LABEL */
+
+.innerLabel {
+	line-height: 1;
 }
