--- a/frontend/styles/overrides/SegmentedControl.module.css
+++ b/frontend/styles/overrides/SegmentedControl.module.css
@@ -15,6 +15,20 @@
 	.root {
 		flex-direction: column;
 	}
+	.control::before {
+		width: 100%;
+		height: 1px;
+	}
+}
+
+/* * */
+/* CONTROL */
+
+@media screen and (max-width: 350px) {
+	.control::before {
+		width: 100%;
+		height: 1px;
+	}
 }
 
 /* * */
