--- a/frontend/components/common/TimetableWithVariants/styles.module.css
+++ b/frontend/components/common/TimetableWithVariants/styles.module.css
@@ -15,6 +15,7 @@
 .column {
   display: grid;
   grid-auto-rows: 26px;
+  height: min-content;
 }
 
 /* * */
@@ -27,6 +28,10 @@
   justify-content: center;
   font-size: 14px;
   line-height: 1;
+}
+
+.minute {
+  position: relative;
 }
 
 .column:first-child .hour,
@@ -141,4 +146,15 @@
 .exceptionLink .underline{
   text-decoration: underline;
   text-underline-offset: 3px;
+}
+
+
+
+.realtimeLine {
+  background-color: var(--color-realtime-75);
+  border-radius: 1000px;
+  height: 2px;
+  margin-top: -1px;
+  position: absolute;
+  width: 100%;
 }
