--- a/frontend/components/stops/Single/styles.module.css
+++ b/frontend/components/stops/Single/styles.module.css
@@ -4,8 +4,8 @@
 .headingSection {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
+	justify-content: flex;
+    align-items: flex-start;
 	gap: var(--size-spacing-15);
 }
 
@@ -18,6 +18,24 @@
 	justify-content: flex-start;
 	align-items: center;
 	gap: var(--size-spacing-15);
+}
+
+.headingTitle{
+    font-size: 20px;
+    font-weight: 700;
+    align-items: center;
+}
+
+.icon{
+    position:relative;
+    top: 6px;
+    margin-left: 8px;
+    color: var(--color-system-text-400);
+}
+
+.badges{
+    display: flex;
+    gap: 10px;
 }
 
 
