Style: Update QR code styles for improved layout and visuals in profile sync component

--- a/frontend/components/profile/sync/styles.module.css
+++ b/frontend/components/profile/sync/styles.module.css
@@ -7,5 +7,8 @@
 }
 
 .qrCode {
-    padding: var(--size-spacing-20);
+    padding: var(--size-spacing-10);
+    margin: var(--size-spacing-10);
+    border-radius: 5px;
+    background-color: var(--color-primary-white);
 }
