Tweaked Section styles, WP links on hover

--- a/frontend/components/layout/Section/styles.module.css
+++ b/frontend/components/layout/Section/styles.module.css
@@ -79,6 +79,7 @@
 	gap: var(--size-spacing-5);
 	margin-bottom: var(--size-spacing-5);
 	transition: all 300ms ease;
+	cursor: pointer;
 }
 
 .backButton:hover {
