--- a/frontend/components/news/SinglePageContent/styles.module.css
+++ b/frontend/components/news/SinglePageContent/styles.module.css
@@ -28,6 +28,16 @@
 }
 
 /* * */
+/* RESET / HEADINGS */
+
+.content h1 {
+	font-size: 24px;
+	font-weight: var(--font-weight-bold);
+	color: var(--color-system-text-100);
+	margin-top: var(--size-spacing-20);
+}
+
+/* * */
 /* RESET / PARAGRAPHS */
 
 .content p {
@@ -52,6 +62,11 @@
 .content a {
 	color: var(--color-system-text-100);
 	text-decoration: underline;
+	border-radius: 5px;
+}
+
+.content a:hover {
+	background-color: var(--color-system-background-300);
 }
 
 
