--- a/frontend/components/home/QuickSearchFavoritesBar/styles.module.css
+++ b/frontend/components/home/QuickSearchFavoritesBar/styles.module.css
@@ -4,6 +4,11 @@
 .container {
 	padding: var(--size-spacing-20);
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	gap: var(--size-spacing-15);
 }
 
 /* * */
