--- a/frontend/components/home/QuickSearchFavoritesBar/styles.module.css
+++ b/frontend/components/home/QuickSearchFavoritesBar/styles.module.css
@@ -21,3 +21,18 @@
 	opacity: 0.2;
 	line-height: 1;
 }
+
+/* * */
+/* MORE */
+
+.more {
+	font-size: 16px;
+	font-weight: var(--font-weight-semibold);
+	color: var(--color-primary-black);
+	line-height: 1;
+	margin-left: 3px;
+}
+
+.more:hover {
+	text-decoration: underline;
+}
