--- a/frontend/components/common/Map/styles.module.css
+++ b/frontend/components/common/Map/styles.module.css
@@ -4,22 +4,40 @@
 .container {
 	width: 100%;
 	height: 100%;
-	display: flex;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr auto;
 	flex-direction: column;
 	position: relative;
+}
+
+/* * */
+/* CHILDREN WRAPPER */
+
+.childrenWrapper {
+	/* position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+	height: 100%; */
 }
 
 /* * */
 /* ATTRIBUTION */
 
 .attributionWrapper {
+	position: absolute;
+	bottom: 0;
+	right: 0;
 	display: flex;
-	gap: 4px;
-	padding-left: 8px;
-	font-size: 10px;
+	padding: var(--size-spacing-5) var(--size-spacing-10);
+	font-size: 8px;
+	font-weight: var(--font-weight-semibold);
+	line-height: 1;
 	color: var(--color-system-text-300);
+	gap: var(--size-spacing-5);
 }
 
 .attributionWrapper a:hover{
+	color: var(--color-primary-black);
 	text-decoration: underline;
 }
