--- a/frontend/components/lines/PathStop/styles.module.css
+++ b/frontend/components/lines/PathStop/styles.module.css
@@ -1,3 +1,37 @@
+/* * */
+/* CONTAINER */
+
+.container {
+    display: grid;
+	grid-template-columns: 30px 1fr;
+	padding: 0 var(--size-spacing-20);
+}
+
+.container.isFirstStop {
+	padding-top: var(--size-spacing-20)
+}
+
+.container.isLastStop {
+	padding-bottom: var(--size-spacing-20)
+}
+
+.container.isSelected {
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
+}
+
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+
 .spineLine{
     width: 16px;
     align-self: stretch;
@@ -23,12 +57,6 @@
     height:22px;
 }
 
-.stop{
-    display: flex;
-    gap: 10px;
-    padding-left: 23px;
-    padding-right: 23px;
-}
 
 .stopInfo{
     display: flex;
@@ -63,9 +91,6 @@
 }
 
 .stop[data-selected="true"]{
-    background: var(--color-system-background-100);
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
-
     .stopInfo {
         padding-top:17px;
         padding-bottom:26px;
