--- a/frontend/components/lines/PathStop/styles.module.css
+++ b/frontend/components/lines/PathStop/styles.module.css
@@ -25,7 +25,8 @@
 .container.isSelected:hover {
 	cursor: default;
 	background-color: var(--color-system-background-100);
-	box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.15);
+	z-index: 10;
 }
 
 /* * */
@@ -34,7 +35,8 @@
 .detailsWrapper {
 	display: flex;
 	flex-direction: column;
-	padding: var(--size-spacing-10) 0;
+	gap: var(--size-spacing-15);
+	padding: var(--size-spacing-20) 0;
 }
 
 .isFirstStop .detailsWrapper {
