--- a/frontend/components/stops/NextBuses/styles.module.css
+++ b/frontend/components/stops/NextBuses/styles.module.css
@@ -1,3 +1,19 @@
 .container{
   width:100%;
 }
+
+
+.toggle {
+  display: flex;
+  width: 100%;
+  padding: var(--size-xs);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 600;
+  color: var(--color-system-text-400);
+  border-radius: 999px;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
