--- a/frontend/components/stops/StopMap/styles.module.css
+++ b/frontend/components/stops/StopMap/styles.module.css
@@ -19,3 +19,10 @@
     height: 220px;
     width: 100%;
 }
+
+.popupWrapper div div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+}
