Add play tts functionality and stop facility icons

--- a/frontend/components/common/FavoriteToggle/styles.module.css
+++ b/frontend/components/common/FavoriteToggle/styles.module.css
@@ -2,7 +2,7 @@
 /* CONTAINER */
 
 .container {
-	display: flex;
+	display: inline-flex;
 	cursor: pointer;
 	transition: all 200ms ease;
 	color: var(--color-system-text-400);
