--- a/frontend/components/contacts/Form/styles.module.css
+++ b/frontend/components/contacts/Form/styles.module.css
@@ -1,6 +1,9 @@
+/* * */
+/* IFRAME */
+
 .iframe {
     width: 100%;
-    height: 600px;
+	height: 600px;
     border: none;
     border-radius: 5px;
 }
