Project re-organization (3rd try)
The project was re-organized to better separate different sets of views: website, apps, mupi. Mantine theme was also extended to support different styles for each view.

--- a/frontend/components/news/SinglePageContent/styles.module.css
+++ b/frontend/components/news/SinglePageContent/styles.module.css
@@ -78,4 +78,4 @@
 
 
 /* * */
-/* FOR MORE RESET STYLES PLEASE LOOK AT @/styles/wordpress.css FILE */
+/* FOR MORE RESET STYLES PLEASE LOOK AT @/themes/wordpress.css FILE */
