--- a/frontend/themes/variables.css
+++ b/frontend/themes/variables.css
@@ -13,27 +13,27 @@
 	/* * */
 	/* COLOR / SYSTEM */
 
-	--color-system-background-100: #ffffff;
+	--color-system-background-100: #fff;
 	--color-system-background-200: #fafafa;
 	--color-system-background-300: #f0f0f0;
-	/* ... */
-	--color-system-background-900: #000000;
+	--color-system-background-900: #000;
 
+	/* ... */
 	--color-system-border-100: #f0f0fa;
 	--color-system-border-200: #bebec8;
-
-	--color-system-text-100: #000000;
+	--color-system-text-100: #000;
 	--color-system-text-200: #5a5a64;
 	--color-system-text-300: #9696a0;
 	--color-system-text-400: #d2d2dc;
+
 	/* ... */
-	--color-system-text-900: #ffffff;
+	--color-system-text-900: #fff;
 
 	/* * */
 	/* COLOR / PRIMARY */
 
-	--color-primary-white: #ffffff;
-	--color-primary-black: #000000;
+	--color-primary-white: #fff;
+	--color-primary-black: #000;
 
 	/* * */
 	/* COLOR / STATUS */
@@ -42,17 +42,14 @@
 	--color-status-info-border: #DCE6F0;
 	--color-status-info-text: #054B8C;
 	--color-status-info-shadow: #054b8c80;
-
 	--color-status-ok-background: #EBF5EB;
 	--color-status-ok-border: #D7EBD7;
-	--color-status-ok-text: #2D8C3C;
+	--color-status-ok-text: #3CB43C;
 	--color-status-ok-shadow: #2D8C3C80;
-
 	--color-status-warning-background: #FFFAF5;
 	--color-status-warning-border: #FFF0D7;
 	--color-status-warning-text: #F09600;
 	--color-status-warning-shadow: #F0960080;
-
 	--color-status-danger-background: #FFF5F5;
 	--color-status-danger-border: #FAE6DC;
 	--color-status-danger-text: #e64b23;
@@ -61,20 +58,19 @@
 	/* * */
 	/* COLOR / REALTIME */
 
-	--color-realtime-0: rgba(0, 215, 50, 0);
-	--color-realtime-5: rgba(0, 215, 50, 0.05);
-	--color-realtime-15: rgba(0, 215, 50, 0.15);
-	--color-realtime-25: rgba(0, 215, 50, 0.25);
-	--color-realtime-50: rgba(0, 215, 50, 0.5);
-	--color-realtime-75: rgba(0, 215, 50, 0.75);
-	--color-realtime-100: rgba(0, 205, 50, 1);
+	--color-realtime-0: rgb(0 215 50 / 0%);
+	--color-realtime-5: rgb(0 215 50 / 5%);
+	--color-realtime-15: rgb(0 215 50 / 15%);
+	--color-realtime-25: rgb(0 215 50 / 25%);
+	--color-realtime-50: rgb(0 215 50 / 50%);
+	--color-realtime-75: rgb(0 215 50 / 75%);
+	--color-realtime-100: rgb(0 205 50 / 100%);
 
 	/* * */
 	/* SIZE / WIDTH */
 
 	--size-width-global: 1200px;
 	--size-width-heading: 700px;
-
 	--size-height-header: 50px;
 
 	/* * */
@@ -96,22 +92,16 @@
 	--font-weight-bold: 700; /* SemiBold */
 	--font-weight-semibold: 600; /* SemiBold */
 	--font-weight-medium: 500; /* Medium */
-
 	--font-size-heading: 26px;
 	--font-weight-heading: 700; /* Bold */
-
 	--font-size-title: 20px;
 	--font-weight-title: 600; /* SemiBold */
-
 	--font-size-subtitle: 18px;
 	--font-weight-subtitle: 600; /* SemiBold */
-
 	--font-size-nav: 16px;
 	--font-weight-nav: 600; /* SemiBold */
-
 	--font-size-text: 14px;
 	--font-weight-text: 500; /* Medium */
-
 	--font-size-muted: 12px;
 	--font-weight-muted: 500; /* Medium */
 
@@ -133,17 +123,13 @@
 		/* * */
 		/* COLOR / SYSTEM */
 
-		--hsl: hsl(232, 8%, 12%);
-
+		--hsl: hsl(232deg 8% 12%);
 		--color-system-background-100: hsl(from var(--hsl) h s calc(l * 18/13));
 		--color-system-background-200: hsl(from var(--hsl) h s calc(l * 15/13));
 		--color-system-background-300: var(--hsl);
-
 		--color-system-border-100: hsl(from var(--hsl) h s calc(l * 27/13));
 		--color-system-border-200: hsl(from var(--hsl) h s calc(l * 37/13));
-
-
-		--color-system-text-100: #ffffff;
+		--color-system-text-100: #fff;
 		--color-system-text-200: #c8c8d2;
 		--color-system-text-300: #8c8c96;
 		--color-system-text-400: #64646e;
@@ -155,17 +141,14 @@
 		--color-status-info-border: #525868;
 		--color-status-info-text: #84c1fb;
 		--color-status-info-shadow: #6bb5fa80;
-
 		--color-status-ok-background: #EBF5EB;
 		--color-status-ok-border: #D7EBD7;
 		--color-status-ok-text: #2D8C3C;
 		--color-status-ok-shadow: #2D8C3C80;
-
 		--color-status-warning-background: #FFFAF5;
 		--color-status-warning-border: #FFF0D7;
 		--color-status-warning-text: #F09600;
 		--color-status-warning-shadow: #F0960080;
-
 		--color-status-danger-background: #FFF5F5;
 		--color-status-danger-border: #FAE6DC;
 		--color-status-danger-text: #e64b23;
@@ -198,13 +181,13 @@
 
 /* * */
 
-@media only screen and (max-width: 900px) {
+@media only screen and (width <= 900px) {
 	only-desktop {
 		display: none;
 	}
 }
 
-@media only screen and (min-width: 901px) {
+@media only screen and (width >= 901px) {
 	only-mobile {
 		display: none;
 	}
@@ -212,18 +195,15 @@
 
 /* * */
 
-@media (max-width: 500px) {
+@media (width <= 500px) {
   :root {
 
 		/* * */
 		/* FONT */
 
 		--font-size-heading: 26px;
-
 		--font-size-title: 20px;
-
 		--font-size-text: 14px;
-
 		--font-size-muted: 12px;
 
   }
