--- a/frontend/components/stores/StoresListGroupItem/styles.module.css
+++ b/frontend/components/stores/StoresListGroupItem/styles.module.css
@@ -4,12 +4,20 @@
 .container {
 	display: flex;
 	flex-direction: column;
+	gap: var(--size-spacing-20);
 	align-items: flex-start;
 	justify-content: flex-start;
-	gap: var(--size-spacing-20);
 	padding: var(--size-spacing-20);
-	border-top: 1px solid var(--color-system-border-100);
+	cursor: pointer;
+	scroll-margin-top: calc(var(--size-height-header) * 1.25);
 	background-color: var(--color-system-background-100);
+	border-top: 1px solid var(--color-system-border-100);
+}
+
+.container.isSelected {
+	position: relative;
+	z-index: 999;
+	box-shadow: var(--box-shadow-lg);
 }
 
 /* * */
@@ -29,25 +37,38 @@
 }
 
 .storeName {
+	margin-bottom: -10px;
 	font-size: var(--font-size-heading);
 	font-weight: var(--font-weight-bold);
 	color: var(--color-system-text-100);
-	margin-bottom: -10px;
+}
+
+.container:hover .storeName {
+	text-decoration: underline;
 }
 
 /* * */
 /* INFO GROUP WRAPPER */
 
 .infoGroupWrapper .label {
-	color: var(--color-system-text-300);
+	padding-bottom: 3px;
 	font-size: var(--font-size-muted);
 	font-weight: var(--font-weight-bold);
+	color: var(--color-system-text-300);
 	text-transform: uppercase;
-	padding-bottom: 3px;
 }
 
 .infoGroupWrapper .value {
-	color: var(--color-system-text-100);
 	font-size: var(--font-size-text);
 	font-weight: var(--font-weight-medium);
+	color: var(--color-system-text-100);
+}
+
+/* * */
+/* ACTIONS WRAPPER */
+
+.actionsWrapper {
+	display: flex;
+	flex-direction: row;
+	gap: var(--size-spacing-10);
 }
