Enhance MetricsSectionDemandByLine: add line selection and display selected metrics with sparkline

--- a/frontend/components/home/MetricsSectionDemandByLine/styles.module.css
+++ b/frontend/components/home/MetricsSectionDemandByLine/styles.module.css
@@ -44,29 +44,13 @@
 /* REALTIME VALUE WRAPPER ITEM */
 .realtimeValueWrapperItem {
 	position: relative;
-}
+	opacity: 0.5;
+	cursor: pointer;
+	transition: opacity 0.5s;
 
-.realtimeValueWrapperItem::before {
-	content: '';
-	position: absolute;
-	z-index: 2;
-	left: -5px;
-	width: 10px;
-	height: 10px;
-	border-radius: 100%;
-	border: 1px solid var(--color-system-background-100);
-}	
-
-.realtimeValueWrapperItem:nth-child(1)::before {
-	background-color: var(--color-brand);
-}
-
-.realtimeValueWrapperItem:nth-child(2)::before {
-	background-color: var(--color-status-danger-text);
-}
-
-.realtimeValueWrapperItem:nth-child(3)::before {
-	background-color: var(--color-status-info-text);
+	&.selected {
+		opacity: 1;
+	}
 }
 
 /* * */
@@ -106,8 +90,6 @@
 /* GRAPH WRAPPER */
 
 .graphWrapper {
-	display: flex;
-	justify-content: center;
 	width: 100%;
 	z-index: 1;
 	opacity: 0.75;
@@ -139,14 +121,4 @@
 
 .popoverLink {
 	text-decoration: underline;
-}
-
-/* * */
-/* PieChart Labels*/
-.pieChart :global(.mantine-ChartTooltip-tooltipItemName) {
-}
-
-.pieChart :global(.recharts-layer text) {
-	fill: var(--color-system-background-100);
-	font-weight: var(--font-weight-bold);
 }
