Refactor SinglePage component to use type annotation for content prop and add Scroll Padding to handle Header

--- a/frontend/components/news/SinglePage/styles.module.css
+++ b/frontend/components/news/SinglePage/styles.module.css
@@ -9,10 +9,9 @@
 }
 
 @media screen and (max-width: 900px) {
-	/* .innerWrapper {
+	.innerWrapper {
 		grid-template:
 			"b" auto [b_]
-			"a" auto [a_]
-			"c" auto [c_] / 1fr;
-	} */
+			"a" auto [a_];
+	}
 }
