--- a/frontend/components/stores/StoresListGroupItem/styles.module.css
+++ b/frontend/components/stores/StoresListGroupItem/styles.module.css
@@ -20,6 +20,10 @@
 	box-shadow: var(--box-shadow-lg);
 }
 
+.container.isSelected:hover {
+	cursor: default;
+}
+
 /* * */
 /* HEADER */
 
@@ -45,6 +49,10 @@
 
 .container:hover .storeName {
 	text-decoration: underline;
+}
+
+.container.isSelected:hover .storeName {
+	text-decoration: none;
 }
 
 /* * */
