--- a/videowall/components/screens/Screen4/styles.module.css
+++ b/videowall/components/screens/Screen4/styles.module.css
@@ -2,29 +2,17 @@
 /* LOGO */
 
 .logo {
-  width: 800px;
-  background-color: white;
-  padding: 30px;
-  border-top-left-radius: 30px;
   position: fixed;
-  bottom: 0;
   right: 0;
-}
-
-.logo img {
-  width: 100%;
-}
-
-/* * */
-/* ALL VEHICLES */
-
-.vehicles {
-  width: 600px;
-  background-color: white;
+  bottom: 0;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  width: 800px;
   padding: 30px;
+  background-color: white;
   border-top-left-radius: 30px;
-  position: absolute;
-  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo img {
