--- a/frontend/components/lines/PathStopTimetable/styles.module.css
+++ b/frontend/components/lines/PathStopTimetable/styles.module.css
@@ -26,3 +26,16 @@
 	font-weight: var(--font-weight-medium);
 	color: var(--color-system-text-300);
 }
+
+.nextDate {
+	font-size: 14px;
+	font-style: italic;
+	font-weight: var(--font-weight-medium);
+	color: var(--color-status-info-text);
+	text-decoration: underline;
+	cursor: pointer;
+
+	&:hover {
+		opacity: 0.8;
+	}
+}
