--- a/frontend/components/home/MainCarouselCard/styles.module.css
+++ b/frontend/components/home/MainCarouselCard/styles.module.css
@@ -41,3 +41,10 @@
 	opacity: 1;
 }
 
+@media only screen and (width <= 900px) {
+	.learnMore {
+		margin-bottom: var(--size-spacing-10);
+		box-shadow: 0 0 10px 0 rgb(0 0 0 / 10%);
+		opacity: 1;
+	}
+}
