--- a/frontend/components/common/Card/styles.module.css
+++ b/frontend/components/common/Card/styles.module.css
@@ -2,7 +2,6 @@
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     border: 1px solid var(--color-system-border-100);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     padding: 10px;
@@ -31,6 +30,7 @@
 }
 
 .cardFooter {
+    margin-top: auto;
     display: flex;
     align-items: center;
     padding-top: 0;
