--- a/frontend/components/helpdesks/Service/styles.module.css
+++ b/frontend/components/helpdesks/Service/styles.module.css
@@ -15,8 +15,10 @@
 .images {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 1rem;
     height: 100px;
+    width: 100px;
 
     & img {
         height: 100%;
@@ -31,5 +33,22 @@
 
     & img {
         height: 80px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .content {
+        grid-template-columns: 1fr;
+    }
+
+    .card {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        gap: 1rem;
+
+        & img {
+            height: 80px;
+        }
     }
 }
