--- a/frontend/components/helpdesks/ServicePointsFilters/styles.module.css
+++ b/frontend/components/helpdesks/ServicePointsFilters/styles.module.css
@@ -1,35 +1,54 @@
-.filters{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 1rem;
-}
-
-.cardTypeWrapper{
+.content {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
 }
 
-.filtersA{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.validity{
+    color: var(--color-system-text-300);
+    font-size: 10px;
+    font-weight: 600;
+    font-style: SemiBold;
+    text-align: left;
 }
 
-.filtersB{
+.images {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 1rem;
+    height: 100px;
+    width: 100px;
+
+    & img {
+        height: 100%;
+    }
 }
 
-@media screen and (max-width: 768px){
-    .filters{
+.cardAlt {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 1rem;
+
+    & img {
+        height: 80px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .content {
         grid-template-columns: 1fr;
     }
 
-    .filtersB{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 1rem;
+    .card {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        gap: 1rem;
+
+        & img {
+            height: 80px;
+        }
     }
 }
