--- a/frontend/components/cards/DiscountTableMobile/styles.module.css
+++ b/frontend/components/cards/DiscountTableMobile/styles.module.css
@@ -18,7 +18,7 @@
   border: 1px solid var(--color-system-border-200);
 }
 
-.table__head {
+.tableHead {
   text-transform: uppercase;
   color: var(--color-system-text-200);
   position: sticky;
@@ -27,7 +27,7 @@
   z-index: 1;
 }
 
-.table__head__pricing {
+.tableHeadPricing {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
