--- a/frontend/components/cards/MunicipalDiscounts/styles.module.css
+++ b/frontend/components/cards/MunicipalDiscounts/styles.module.css
@@ -12,7 +12,7 @@
     text-align: left;
 }
 
-.card__image__wrapper {
+.cardImageWrapper {
     width: 75px;
     height: 75px;
     padding: 10px;
@@ -23,7 +23,7 @@
     background-color: white;
 }
 
-.card__image {
+.cardImage {
     width: 100%;
     height: 100%;
     object-fit: cover;
