--- a/frontend/components/common/map/MapToolbar/styles.module.css
+++ b/frontend/components/common/map/MapToolbar/styles.module.css
@@ -15,6 +15,7 @@
     cursor: pointer;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
     transition: all 300ms ease;
+    border: none;
 
     &:hover {
         color: var(--color-system-text-200);
