--- a/frontend/components/home/MetricsSection/styles.module.css
+++ b/frontend/components/home/MetricsSection/styles.module.css
@@ -1,4 +1,5 @@
 /* * */
+
 /* INNER WRAPPER */
 
 .innerWrapper {
@@ -13,8 +14,30 @@
 	gap: var(--size-spacing-10);
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (width <= 900px) {
 	.innerWrapper {
 		grid-template-columns: 1fr;
 	}
+}
+
+/* * */
+
+/* GO TO METRICS */
+
+.goToMetrics {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 18px;
+	font-weight: 500;
+	color: var(--color-system-text-200);
+	background-color: var(--color-system-background-300);
+	border-radius: 5px;
+	transition: all 300ms ease;
+}
+
+.goToMetrics:hover {
+	color: var(--color-system-text-100);
+	background-color: var(--color-system-background-200);
+	box-shadow: 0 0 15px 0 rgb(0 0 0 / 5%);
 }
