--- a/frontend/components/common/map/Map/styles.module.css
+++ b/frontend/components/common/map/Map/styles.module.css
@@ -4,6 +4,8 @@
 .container {
 	width: 100%;
 	height: 100%;
+	display: flex;
+	flex-direction: column;
 	/* display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 1fr auto; */
