--- a/frontend/components/layout/GridNavItem/styles.module.css
+++ b/frontend/components/layout/GridNavItem/styles.module.css
@@ -1,37 +1,39 @@
 /* * */
+
 /* CONTAINER */
 
 .container {
 	display: flex;
 	flex-direction: row;
+	gap: var(--size-spacing-10);
 	align-items: center;
 	justify-content: flex-start;
-	gap: var(--size-spacing-10);
-	background-color: var(--color-system-background-100);
-	padding: var(--size-spacing-30) var(--size-spacing-20);
-	border: 1px solid var(--color-system-border-100);
 	width: 100%;
+	padding: var(--size-spacing-30) var(--size-spacing-20);
 	color: var(--color-system-text-100);
+	background-color: var(--color-system-background-100);
+	border: 1px solid var(--color-system-border-100);
 }
 
 .container:hover {
-	border-color: var(--color-system-border-200);
 	background-color: var(--color-system-background-200);
+	border-color: var(--color-system-border-200);
 }
 
 .container:active {
-	border-color: var(--color-system-border-300);
 	background-color: var(--color-system-background-300);
+	border-color: var(--color-system-border-300);
 }
 
-@media (max-width: 500px) {
+@media (width <= 500px) {
 	.container,
 	.container:hover,
 	.container:active {
-		border: none;
 		padding: var(--size-spacing-15) var(--size-spacing-20);
+		border: none;
 		border-top: 1px solid var(--color-system-border-100);
 	}
+
 	/* .container:last-child,
 	.container:last-child:hover,
 	.container:last-child:active {
@@ -40,13 +42,19 @@
 }
 
 /* * */
+
 /* ICON WRAPPER */
 
 .iconWrapper {
 	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 30px;
+	aspect-ratio: 1/1;
 }
 
 /* * */
+
 /* LABEL */
 
 .label {
@@ -58,6 +66,7 @@
 }
 
 /* * */
+
 /* ARROW WRAPPER */
 
 .arrowWrapper {
