--- a/frontend/components/header/NavigationDrawer/styles.module.css
+++ b/frontend/components/header/NavigationDrawer/styles.module.css
@@ -53,7 +53,6 @@
 .group {
 	display: flex;
 	flex-direction: column;
-	gap: var(--size-spacing-5);
 	border-bottom: 1px solid var(--color-system-border-100);
 }
 
@@ -62,6 +61,7 @@
 
 .groupLabel {
 	margin: 0 var(--size-spacing-15);
+	margin-bottom: var(--size-spacing-5);
 	font-size: 18px;
 	font-weight: var(--font-weight-heading);
 	color: var(--color-system-text-100);
