--- a/frontend/components/layout/RegularListItem/styles.module.css
+++ b/frontend/components/layout/RegularListItem/styles.module.css
@@ -4,14 +4,14 @@
 .container {
 	display: flex;
 	flex-direction: row;
+	gap: var(--size-spacing-10);
 	align-items: center;
 	justify-content: flex-start;
-	gap: var(--size-spacing-10);
-	background-color: var(--color-system-background-100);
-	padding: var(--size-spacing-20);
-	border-bottom: 1px solid var(--color-system-border-100);
 	width: 100%;
+	padding: var(--size-spacing-20);
 	color: var(--color-system-text-100);
+	background-color: var(--color-system-background-100);
+	border-bottom: 1px solid var(--color-system-border-100);
 }
 
 .container:hover {
@@ -26,12 +26,16 @@
 	border-bottom: none;
 }
 
-@media (max-width: 500px) {
+@media (width <= 500px) {
 	.container,
 	.container:hover,
 	.container:active {
 		padding: var(--size-spacing-15) var(--size-spacing-20);
 	}
+}
+
+.disableLink {
+	pointer-events: none;
 }
 
 /* * */
