--- a/frontend/components/stops/StopDisplay/styles.module.css
+++ b/frontend/components/stops/StopDisplay/styles.module.css
@@ -3,8 +3,8 @@
 
 .container {
 	display: flex;
-	flex-direction: row;
-	gap: var(--size-spacing-10);
-	align-items: center;
+	flex-direction: column;
+	gap: var(--size-spacing-3);
+	align-items: flex-start;
 	justify-content: flex-start;
 }
